Fixed overFlow

--- a/style/main.scss
+++ b/style/main.scss
@@ -29,6 +29,7 @@ body {
 .site-wrapper {
     width: 100%;
     margin: auto;
+    overflow: hidden;
 }
 
 .hero-section {
@@ -237,6 +238,9 @@ body {
                     .inner {
                         margin-left: auto;
                         margin-right: 100px;
+                        @include lg-max {
+                            margin-right: auto;
+                        }
                     }
                 }
             }
